Atualizando namespace da documentação e arte da header

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -36,7 +36,7 @@
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span class="php-keyword">require_once</span>
 						<span>(</span>
-						<span class="php-string">"../kep/autoload.php"</span>
+						<span class="php-string">"../vendor/autoload.php"</span>
 						<span>);</span>
 					</span>
 					<span class="php-line">
@@ -45,7 +45,7 @@
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span class="php-keyword">use</span>
-						<span>route\Route;</span>
+						<span>KepPHP\Kep\route\Route;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -53,7 +53,7 @@
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>Route::group(</span>
-						<span class="php-string">"api/v2"</span>
+						<span class="php-string">"api/v1"</span>
 						<span>, </span>
 						<span class="php-keyword">function</span>
 						<span>(){</span>
@@ -187,7 +187,7 @@
 					<div class="code">
 						<span class="php-line">
 							<span class="php-keyword">use</span>
-							<span>controller\BaseController;</span>
+							<span>KepPHP\Kep\controller\BaseController;</span>
 						</span>
 						<span class="php-line">
 							<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -246,11 +246,11 @@
 					<div class="code">
 						<span class="php-line">
 							<span class="php-keyword">use</span>
-							<span>database\DB;</span>
+							<span>KepPHP\Kep\database\DB;</span>
 						</span>
 						<span class="php-line">
 							<span class="php-keyword">use</span>
-							<span>model\BaseModel;</span>
+							<span>KepPHP\Kep\model\BaseModel;</span>
 						</span>
 						<span class="php-line">
 							<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
