--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ header .right a:hover{
 header .right a.active {
     background-color: #3e2c5a;
     padding-top: 40px;
-    padding-bottom: 36px;
+    padding-bottom: 35px;
 }
 
 .browser {
@@ -179,13 +179,13 @@ header .right a.active {
 .single-text{
 	float: left;
 	width: 100%;
-	height: 132px;
 	background-color: #e1e1e1;
 }
 
 .single-text p{
 	text-align: center;
-    font-size: 48px;
+    font-size: 32px;
+    margin: 47px 0px;
     color: #646464;
 }
 
