Correção de sintaxe

--- a/app/views/routing.html
+++ b/app/views/routing.html
@@ -99,7 +99,7 @@
 						<span class="php-comment">// Tarefas para retorna</span>
 					</span>
 					<span class="php-line">
-						<span>)};</span>
+						<span>});</span>
 					</span>
 				</div>
 				<h1>Post</h1>
@@ -127,7 +127,7 @@
 						<span class="php-comment">// Tarefas para retorna</span>
 					</span>
 					<span class="php-line">
-						<span>)};</span>
+						<span>});</span>
 					</span>
 				</div>
 				<h1>Get</h1>
@@ -170,7 +170,7 @@
 						<span>;</span>
 					</span>
 					<span class="php-line">
-						<span>)};</span>
+						<span>});</span>
 					</span>
 				</div>
 				<p>O Kep ele retorna uma matriz com os paramêtros contidos na variavel $parameters para metodos Get.</p>	
@@ -199,7 +199,7 @@
 						<span class="php-comment">// Tarefas para retorna</span>
 					</span>
 					<span class="php-line">
-						<span>)};</span>
+						<span>});</span>
 					</span>
 				</div>
 				<h1>Delete</h1>
@@ -227,7 +227,7 @@
 						<span class="php-comment">// Tarefas para retorna</span>
 					</span>
 					<span class="php-line">
-						<span>)};</span>
+						<span>});</span>
 					</span>
 				</div>
 				<h1>Grupos de Route</h1>
