Alterando informações do Kep

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -110,10 +110,10 @@
 			<div class="jumbotron">
 				<div class="image-coder"></div>
 				<div class="text">
-					<h3>Facilidade no aprendizado</h3>
-					<span>O Kep Framework desenvolvido para iniciantes poderem se <br>
-					familiarizar com uma framework antes ir para algo mais <br>
-					profissional, como o <b>Laravel</b></span>
+					<h3>Flexível e Simples</h3>
+					<span>Construa API flexível e simples com a Framework Kep, escrita <br /> em PHP e criada
+                    para iniciantes, com uma pequena linha  <br /> de aprendizado, pode construir com mais segurança.
+                    </span>
 					<br /><br />
 					<a href="#/docs#installation" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.2</a>
 				</div>
