Atualizando documentação de configuração do Kep

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -92,10 +92,14 @@
 						<span>└─ vendor/</span>
 					</span>
 				</div>
-				<p>Para o Kep, identificar a pasta e efetuar conexão com o banco de dados, precisamos altear o arquivo no diretório.</p>
+				<p>Para o Kep, identificar a pasta e efetuar conexão com o banco de dados, precisamos criar o arquivo de configuração na pasta raiz do projeto (Antes da pasta vendor), com o nome config.php.</p>
+				<p>A estrutura do arquivo a seguir.</p>
 				<div class="code docs">
 					<span class="php-line">
-						<span>vendor/kepphp/kep/src/config/config.php</span>
+						<span>config.php</span>
+					</span>
+					<span class="php-line">
+						<span>vendor/</span>
 					</span>
 				</div>
 				<div class="code docs">
