--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -5,7 +5,7 @@
 				<span>Aprenda como utilizar o Kep Framework</span>
 			</div>
 			<div class="right">
-				<a href="#/docs#installation" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.2</a>
+				<a href="#/docs#installation" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.3</a>
 			</div>
 		</div>
 	</div>
@@ -57,7 +57,7 @@
 				<p>Instalação pelo composer, certifique-se de ter <a href="https://getcomposer.org/">Composer</a> instalado em sua máquina.</p>
 				<div class="code docs">
 					<span class="php-line">
-						<span>composer require kepphp/kep *</span>
+						<span>composer require kepphp/kep v0.3.0</span>
 					</span>
 				</div>
 				<p>Acompanhe as versões em nosso <a href="https://github.com/KepPHP/Kep/releases">repositório</a> no Github e lembre sempre em instalar a última versão.</p>
