--- a/app/views/model.html
+++ b/app/views/model.html
@@ -123,7 +123,7 @@
 						<span class="php-variable">$this</span>
 						<span>->load =</span>
 						<span class="php-variable">$this</span>
-						<span>->LoadModel(</span>
+						<span>->model(</span>
 						<span class="php-string">'mymodel'</span>
 						<span>);</span>
 					</span>
