Atualizando informação da mudança de configuração

--- a/app/views/authentication.html
+++ b/app/views/authentication.html
@@ -54,12 +54,7 @@
 				<h1>Token</h1>
 				<p>A token, pode ser numeros e letras aleatorios, gerados pelo seu sistema e adicionado a uma sessão. Token gerada a cada novo login do usuário em seu sistema.</p>
 				<h1>Configuração</h1>
-				<p>Para configurar o sistema de autenticação é preciso altear no arquivo do Kep.</p>
-				<div class="code docs">
-					<span class="php-line">
-						<span>vendor/kepphp/kep/src/config/config.php</span>
-					</span>
-				</div>
+				<p>Para configurar o sistema de autenticação é preciso alterar o seu arquivo de configuração na pasta raiz.</p>
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">return</span>
