--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -60,7 +60,7 @@
 						<span>composer require kepphp/kep *</span>
 					</span>
 				</div>
-				<p>Acompanhe as versões em nosso <a href="https://github.com/KepPHP/Kep/releases">repositório</a> no Github e lembre sempre em instalar a última versão.</p>
+				<p>Acompanhe as versões em nosso <a href="https://github.com/getkep/Kep/releases">repositório</a> no Github e lembre sempre em instalar a última versão.</p>
 				<h1>Configuração</h1>
 				<p>Depois da instalação do Kep com composer em uma pasta, precisamos criar uma nova pasta com qualquer nome(Certifique-se de adicionar este nome na configuração do Kep).</p>
 				<p>Abra a pasta e crie mais 3, com os nomes controllers, models e seeds. a arquitetura de nossa aplicação fica assim:</p>
