--- a/app/views/get-involved.html
+++ b/app/views/get-involved.html
@@ -87,7 +87,7 @@
 				<p>Para um melhor entendimento do gráfico acima, iremos explicar com detalhes. O gráfico é composto por 3 métricas, Corrigido, Em progresso e Não corrigido. Mesmo sendo nomes óbvios de identificarem, eles também são compostos por novas funções, confira abaixo o que cada métrica pode agrupar.</p>
 				<p>- <b>Corrigido</b>: Agrupa correções da framework, melhorias na construção e novas funcionalidades.</p>
 				<p>- <b>Em proguesso</b>: Agrupa todas as informações sitadas em "Corrigido", que estão entrando em fase de desenvolvimento ou acabamento.</p>
-				<p>- <b>Não corrigido</b>: Agrupa todas as informações sitadas acima, os números são baseados de acordo os issues no repositório no <a href="https://github.com/KepPHP/Kep/issues">Github</a>.</p>
+				<p>- <b>Não corrigido</b>: Agrupa todas as informações sitadas acima, os números são baseados de acordo os issues no repositório no <a href="https://github.com/getkep/Kep/issues">Github</a>.</p>
 				<p>Temos dois gráficos compostos na header (Chart StackedBar e Chart Doughnut), os números são atualizados a cada 15 dias e zerado a cada atualização quando a versão for maior(MAJOR).</p>
 				<h2>Versioning</h2>
 				<p>O Kep é mantido sob <a href="http://semver.org/">as orientações Semantic Versioning</a>.</p>
@@ -102,7 +102,7 @@
 				<p>Colabore em melhorar a formo como explicamos e correções ortográficas.</p>
 				<p> - <b>100/100%</b></p>
 				<h2 id="others">Outros</h2>
-				<p>Compartilhe com nos, mostre outra idioma que você posso contribuir. abra um <a href="https://github.com/KepPHP/Kep/issues">issues</a>.</p>
+				<p>Compartilhe com nos, mostre outra idioma que você posso contribuir. abra um <a href="https://github.com/getkep/Kep/issues">issues</a>.</p>
 				<h1>Desenvolvimento web</h1>
 				<p>Ajude a melhorar a performance de nosso website, ajuda em UX e UI é bem vinda.  o seu nome estará na lista de contribuintes.</p>
 				<h2 id="docs">Documentação</h2>
@@ -114,7 +114,7 @@
 				<h1>Projeto</h1>
 				<p>A nossa framework é escrita em PHP e precisamos de sua ajuda para continuarmos melhorando e corrigindo, como boas praticas e uso de patterns.  o seu nome estará na lista de contribuintes.</p>
 				<h2 id="corrections">Correção</h2>
-				<p>Vamos à caça, confira os nossos <a href="https://github.com/KepPHP/Kep/issues">issues</a> e tente corrigir, não tem? realize testes com o projeto. se achar algum basta reportar.</p>
+				<p>Vamos à caça, confira os nossos <a href="https://github.com/getkep/Kep/issues">issues</a> e tente corrigir, não tem? realize testes com o projeto. se achar algum basta reportar.</p>
 				<h2 id="improvements">Melhorias</h2>
 				<p>Ajude a melhorar a nossa framework, utilizando bons modos de escrita e performance.</p>
 				<h2 id="newfunctions">Novas funções</h2>
