--- a/app/views/about.html
+++ b/app/views/about.html
@@ -15,7 +15,7 @@
 				<h1>Criadores</h1>
 				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles" target="_blank">GitHub</a> | <a href="https://twitter.com/MatuzalemTeles" target="_blank">Twitter</a></p>
 				<h1>Contribuintes</h1>
-				<p><a href="https://github.com/KepPHP/Kep" target="_blank">Quero contribuir</a></p>
+				<p><a href="https://github.com/getkep/Kep" target="_blank">Quero contribuir</a></p>
 			</div>
 		</div>
 	</div>
